native access for wrappers